# Chapter_6_HW_22

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  const.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: categories_fixture.json  products_fixture.json
catalog/management/commands/: add_group_moderators.py  add_moderator.py  add_moderator_to_group.py  add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_image_and_more.py  0002_alter_product_options_product_publish_status.py  0003_alter_product_options.py  0003_alter_product_price_sale.py  0004_blog.py  0004_product_owner.py  0005_delete_blog.py
catalog/templates/catalog/: base.html  contacts.html  contacts_new.html  home.html  product_delete.html  product_detail.html  product_form.html  product_list.html  product_list_f.html  product_list_f1.html  products_list.html
catalog/templates/catalog/includes/: menu.html
config/: settings.py  urls.py
users_app/: admin.py  forms.py  models.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_username.py  0004_user_username.py  0005_remove_user_username.py
users_app/templates/: login.html
users_app/templates/users_app/: user_form.html
